--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -12,7 +12,7 @@
 # This should make it easy to add new rules without breaking existing ones.
 
 # Global rule:
-*           @dotnet/docs
+# *          @dotnet/docs
 #
 # C# samples:
 #/csharp/**  @BillWagner
